--- a/gdb/config.in
+++ b/gdb/config.in
@@ -249,6 +249,9 @@
 /* Define if you have the mpfr library. */
 #undef HAVE_LIBMPFR
 
+/* Define to 1 if the libopenocsd library is available */
+#undef HAVE_LIBOPENCSD
+
 /* Define to 1 if you have the <libunwind-ia64.h> header file. */
 #undef HAVE_LIBUNWIND_IA64_H
 
